--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,29 +32,28 @@
 
 
 @media screen and (max-width: 320px){
+    h4{font-size: 16px;}
 
-    .logo1{
-        width: 50px;
-    }
+    h5{font-size: 11px;}
+
+    p{font-size: 14px;}
 }
 
 @media screen and (min-width: 1200px){
-    h4{
-        font-size: 18px;
-    }
+    h4{font-size: 18px;}
 
-    h5{
-        font-size: 13px;
-    }
+    h5{font-size: 13px;}
 
-    p{
-        font-size: 16px;
-    }
+    p{font-size: 16px;}
 
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
     .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
         padding:0 !important;
     }
 
+    .modal-open{
+        overflow: auto;
+    }
+    
 
 }
