--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,11 +40,14 @@
 }
 
 @media screen and (min-width: 1200px){
-    h4{font-size: 18px;}
-
-    h5{font-size: 13px;}
-
-    p{font-size: 16px;}
+    .h3{font-size: 19px;}
+    .h4{font-size: 18px;}
+    .h5{font-size: 13px;}
+    h6 ,.h6{
+        font-size: 12px;
+        margin: 0 !important;
+    }
+    .p{font-size: 16px;}
 
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
     .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
